LB-7353 gamification condition image bug fixed

--- a/Depo/Depo/App/Resources/en.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/en.lproj/OurLocalizable.strings
@@ -2388,4 +2388,4 @@ then {11,99 TRY/Month}*/
 "gamification_title_createalbum" = "Create Album";
 "timeline_header_backup" = "The Best Memories of 2023";
 "winter_video_timeline_header" = "Your Special Winter Memories";
-"yearly" = "";
+"yearly" = "Yearly";
