--- a/Depo/Depo/App/Resources/ka.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/ka.lproj/OurLocalizable.strings
@@ -2304,4 +2304,4 @@ then {11,99 TRY/Month}*/
 "gamification_title_createalbum" = "";
 "timeline_header_backup" = "2023-ის საუკეთესო მოგონებები";
 "winter_video_timeline_header" = "";
-"yearly" = "";
+"yearly" = "ყოველწლიურად";
